updated English and German manual and removed the others

--- a/help/stylesheet.css
+++ b/help/stylesheet.css
@@ -40,3 +40,15 @@ body {
 .toplink {
     text-align: right;
 }
+
+@media screen and (max-width: 50em) {
+
+    #body {
+        margin-left: 0;
+    }
+
+    #nav {
+        float: none;
+    }
+
+}
