--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -37,6 +37,7 @@
     width: 16px;
     height: 16px;
     background-image: url("../images/tools.png");
+    background-color: #eee;
     cursor: pointer;
 }
 
