Close #3: Facilitate switching to page editing
We add commands for switching to edit and preview mode, respectively.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,6 +47,8 @@
 #pagemanager_cut {background-image: url("../images/cut.png")}
 #pagemanager_copy {background-image: url("../images/copy.png")}
 #pagemanager_paste {background-image: url("../images/paste.png")}
+#pagemanager_edit {background-image: url("../images/edit.png")}
+#pagemanager_preview {background-image: url("../images/preview.png")}
 #pagemanager_help {background-image: url("../images/help.png")}
 
 /*
