--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,7 +43,7 @@
 #pagemanager_toggle {background-image: url("../images/toggle.png")}
 #pagemanager_add {background-image: url("../images/add.png")}
 #pagemanager_rename {background-image: url("../images/rename.png")}
-#pagemanager_delete {background-image: url("../images/delete.png")}
+#pagemanager_remove {background-image: url("../images/remove.png")}
 #pagemanager_cut {background-image: url("../images/cut.png")}
 #pagemanager_copy {background-image: url("../images/copy.png")}
 #pagemanager_paste {background-image: url("../images/paste.png")}
