Close #20: Toolbar buttons are too large
We place the icons to the left, and reduce the margins, so the that
buttons are still large enough for small touch screens, but don't take
too much space.

We skip some appropriate fine-tuning and maybe even responsive design
for now, as we *may* switch to Font Awesome, anyway.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,15 +24,16 @@
     text-align: center;
 }
 #pagemanager_toolbar button {
-    min-width: 5em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
 #pagemanager_toolbar button span {
-    display: block;
+    display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 0.3em 0 0.5em 0;
+    margin: 0.1em 0.1em 0.1em 0;
+    width: 16px;
+    height: 16px;
 }
 #pagemanager_add, #pagemanager_toggle, #pagemanager_cut, #pagemanager_edit, #pagemanager_help {margin-left: 1em}
 #pagemanager_save span {background-image: url("../images/save.png")}
