--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,18 +24,17 @@
     text-align: center;
 }
 #pagemanager_toolbar button {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin: 0.7em 0.3em 0.7em 0.3em;
+    padding: 0.4em 0.6em 0.4em 0.6em;
 }
 #pagemanager_toolbar button span {
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 0.1em 0.1em 0.1em 0;
     width: 16px;
     height: 16px;
 }
-#pagemanager_add, #pagemanager_toggle, #pagemanager_cut, #pagemanager_edit, #pagemanager_help {margin-left: 1em}
+#pagemanager_toolbar button[disabled] span {opacity: 0.3}
 #pagemanager_save span {background-image: url("../images/save.png")}
 #pagemanager_toggle span {background-image: url("../images/toggle.png")}
 #pagemanager_add span {background-image: url("../images/add.png")}
