Fix #18: First subpage can't be created with keyboard only
Only having a single `add` (and `paste`) button isn't sufficient. We
still don't like the former solution of having two buttons,
respectively. Instead we put the actual functionality in submenus, and
also add the possibility to insert *before* the selected page.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,6 +46,18 @@
 #pagemanager_edit span {background-image: url("../images/edit.png")}
 #pagemanager_preview span {background-image: url("../images/preview.png")}
 #pagemanager_help span {background-image: url("../images/help.png")}
+.pagemanager_tool_wrapper {
+    position: relative;
+    display: inline-block;
+}
+.pagemanager_tool_inner {
+    position: absolute;
+    display: none;
+}
+#pagemanager_toolbar .pagemanager_tool_inner button {
+    margin: 0;
+    width: 100%;
+}
 
 /*
  * Context menu
