Close #35: hyphens:auto should not affect drop-down menus
We set a min-width on the container to avoid unnecessary line breaks.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,6 +53,7 @@
 .pagemanager_tool_inner {
     position: absolute;
     display: none;
+    min-width: 7em;
 }
 #pagemanager_toolbar .pagemanager_tool_inner button {
     margin: 0;
