Overhaul plugin info screen
We use classes instead of inline styles, add a meaningful alt text for
the logo, remove unnecessary links, and add `target=_blank` to the
remaining links.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,3 +52,15 @@
 #pagemanager_footer {
     height: 150px;
 }
+
+/*
+ * Plugin info
+ */
+
+.pagemanager_logo {
+    float: left;
+    margin: 0 1em 0.5em 0;
+}
+.pagemanager_license {
+    text-align: justify;
+}
